Fix OV logo alignment

--- a/site/src/pages/index.module.css
+++ b/site/src/pages/index.module.css
@@ -25,12 +25,12 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4px;
+  gap: 0.5rem;
 }
 
 .genAITitle {
-  font-family: intelOne, Helvetica, Arial, sans-serif;
-  font-size: 64px;
+  font-size: 4rem;
+  padding-bottom: 1rem;
   background: linear-gradient(101deg, #91FFED 0.16%, #3094FF 36.93%, #B57CFF 73.71%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -40,13 +40,13 @@ section {
 }
 
 .subTitle {
-  font-size: 24px;
+  font-size: 1.5rem;
   color: var(--genai-color-text-white);
   margin-bottom: 1.5rem;
 }
 
 .description {
-  font-size: 16px;
+  font-size: 1rem;
   width: 500px;
   text-align: center;
   color: var(--genai-color-text-white);
